@@ -91,9 +91,9 @@
         <!--<affinity.version>3.2.3</affinity.version>-->
         <antlr4.version>4.9.3</antlr4.version>
         <avro.version>1.11.2</avro.version>
-        <aws.sdk.version>1.12.521</aws.sdk.version>
+        <aws.sdk.version>1.12.531</aws.sdk.version>
         <calcite.version>1.32.0</calcite.version>
-        <classgraph.version>4.8.161</classgraph.version>
+        <classgraph.version>4.8.162</classgraph.version>
         <debezium.version>1.9.7.Final</debezium.version>
         <grpc.version>1.48.0</grpc.version>
         <guava.version>32.1.2-jre</guava.version>
@@ -119,7 +119,7 @@
         <parquet.version>1.13.1</parquet.version>
         <picocli.version>4.7.4</picocli.version>
         <postgresql.version>42.6.0</postgresql.version>
-        <prometheus.version>0.19.0</prometheus.version>
+        <prometheus.version>0.20.0</prometheus.version>
 
         <!--
         Protobuf libraries for each language have own major version, but share minor and patch
@@ -132,7 +132,7 @@
         <scala.version>2.13</scala.version>
         <slf4j.version>1.7.36</slf4j.version>
         <spring.version>4.3.0.RELEASE</spring.version>
-        <snakeyaml.version>2.0</snakeyaml.version>
+        <snakeyaml.version>2.1</snakeyaml.version>
         <snakeyaml.engine.version>2.6</snakeyaml.engine.version>
         <mongodb.version>4.10.2</mongodb.version>
 
@@ -141,7 +141,7 @@
         <activemq.version>5.15.11</activemq.version>
         <assertj.version>3.24.2</assertj.version>
         <atomikos.version>3.9.3</atomikos.version>
-        <bytebuddy.version>1.14.5</bytebuddy.version>
+        <bytebuddy.version>1.14.6</bytebuddy.version>
         <commons-codec.version>1.16.0</commons-codec.version>
         <commons-io.version>2.13.0</commons-io.version>
         <commons-lang3.version>3.13.0</commons-lang3.version>
@@ -157,10 +157,10 @@
         <testcontainers.version>1.18.3</testcontainers.version>
         <jna.version>5.13.0</jna.version>
         <!--  When updating archunit.version, check/remove Java version assumptions in ArchUnitRulesTest.java -->
-        <archunit.version>1.0.1</archunit.version>
-        <errorprone.version>2.21.0</errorprone.version>
+        <archunit.version>1.1.0</archunit.version>
+        <errorprone.version>2.21.1</errorprone.version>
         <awaitility.version>4.2.0</awaitility.version>
-        <kubernetes-server-mock.version>6.8.0</kubernetes-server-mock.version>
+        <kubernetes-server-mock.version>6.8.1</kubernetes-server-mock.version>
         <hikari.version>4.0.3</hikari.version>
 
         <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
@@ -173,10 +173,9 @@
         <vmHeapSettings>-Xms512m -Xmx2G</vmHeapSettings>
         <!-- Java 9+ module system args to be appended during surefire/failsafe executions. -->
         <hazelcast.module.name>ALL-UNNAMED</hazelcast.module.name>
-        <javaModuleArgs/>
 
         <!-- needed for CheckStyle -->
-        <checkstyle.version>8.38</checkstyle.version>
+        <checkstyle.version>10.12.1</checkstyle.version>
         <checkstyle.configLocation>${main.basedir}/checkstyle/checkstyle.xml</checkstyle.configLocation>
         <checkstyle.supressionsLocation>${main.basedir}/checkstyle/suppressions.xml</checkstyle.supressionsLocation>
         <checkstyle.headerLocation>${main.basedir}/checkstyle/ClassHeaderApache.txt</checkstyle.headerLocation>
@@ -203,6 +202,8 @@
            open java.base/java.lang
         TimedMemberStateFactoryHelper:
            open java.management/sun.management
+
+        NOTE: There is a slightly different setting for IBM OpenJ9, see the specific profile
         -->
         <javaModuleArgs>
             --add-exports java.base/jdk.internal.ref=${hazelcast.module.name}
@@ -210,7 +211,6 @@
             --add-opens java.base/sun.nio.ch=${hazelcast.module.name}
             --add-opens java.base/java.lang=${hazelcast.module.name}
             --add-opens java.management/sun.management=${hazelcast.module.name}
-            --add-exports jdk.management/com.ibm.lang.management.internal=${hazelcast.module.name}
             --illegal-access=deny
         </javaModuleArgs>
     </properties>
@@ -488,7 +488,7 @@
                         Version 1.6.1 produces harmless, but noisy warning about missing dependencies.
                         See https://github.com/mojohaus/extra-enforcer-rules/issues/225
                         -->
-                        <version>1.5.1</version>
+                        <version>1.7.0</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -1228,7 +1228,7 @@
                         <groupId>org.sonatype.plugins</groupId>
                         <artifactId>nexus-staging-maven-plugin</artifactId>
                         <!-- do not update to 1.6.10, it blocks release process -->
-                        <version>1.6.8</version>
+                        <version>1.6.10</version>
                         <extensions>true</extensions>
                         <configuration>
                             <serverId>release-repository</serverId>
@@ -1505,6 +1505,26 @@
                 <skipTests>true</skipTests>
                 <maven.javadoc.skip>true</maven.javadoc.skip>
                 <maven.source.skip>true</maven.source.skip>
+            </properties>
+        </profile>
+        <profile>
+            <id>IBM</id>
+            <activation>
+                <property>
+                    <name>java.vendor</name>
+                    <value>IBM Corporation</value>
+                </property>
+            </activation>
+            <properties>
+                <javaModuleArgs>
+                    --add-exports java.base/jdk.internal.ref=${hazelcast.module.name}
+                    --add-opens jdk.management/com.sun.management.internal=${hazelcast.module.name}
+                    --add-opens java.base/sun.nio.ch=${hazelcast.module.name}
+                    --add-opens java.base/java.lang=${hazelcast.module.name}
+                    --add-opens java.management/sun.management=${hazelcast.module.name}
+                    --add-exports jdk.management/com.ibm.lang.management.internal=${hazelcast.module.name}
+                    --illegal-access=deny
+                </javaModuleArgs>
             </properties>
         </profile>
     </profiles>
@@ -1815,7 +1835,7 @@
             <dependency>
                 <groupId>com.google.api.grpc</groupId>
                 <artifactId>proto-google-common-protos</artifactId>
-                <version>2.20.0</version>
+                <version>2.23.0</version>
             </dependency>
             <dependency>
                 <groupId>com.mysql</groupId>
@@ -1841,7 +1861,7 @@
             <dependency>
                 <groupId>com.google.auto.value</groupId>
                 <artifactId>auto-value-annotations</artifactId>
-                <version>1.10.2</version>
+                <version>1.10.3</version>
             </dependency>
             <dependency>
                 <groupId>com.nimbusds</groupId>
@@ -1934,9 +1954,9 @@
                 <version>2.5.0</version>
             </dependency>
             <dependency>
-              <groupId>org.wildfly.openssl</groupId>
-              <artifactId>wildfly-openssl</artifactId>
-              <version>1.1.3.Final</version>
+                <groupId>org.wildfly.openssl</groupId>
+                <artifactId>wildfly-openssl</artifactId>
+                <version>1.1.3.Final</version>
             </dependency>
             <dependency>
                 <groupId>com.google.api-client</groupId>
@@ -2113,7 +2133,7 @@
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
-            <version>10.1.11</version>
+            <version>10.1.12</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
